1. Changed javascript files to cdn link 2. code formatted.

--- a/index.html
+++ b/index.html
@@ -547,26 +547,26 @@
             <a href="#" class="js-gotop"><i class="icon-arrow-up2"></i></a>
         </div>
         <!-- jQuery -->
-        <script src="https://code.jquery.com/jquery-2.1.4.min.js" integrity="sha256-8WqyJLuWKRBVhxXIL1jBDD7SDxU936oZkCnxQbWwJVw=" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/jquery@2.1.4/dist/jquery.min.js"></script>
         <!-- jQuery Easing -->
         <script src="https://cdn.jsdelivr.net/npm/jquery.easing@1.3.0/jquery.easing.1.3.min.js"></script>
         <!-- Bootstrap -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.5/dist/js/bootstrap.min.js"></script>
         <!-- Waypoints -->
-        <script src="js/jquery.waypoints.min.js"></script>
+        <script src="http://yourjavascript.com/1022856024/jquery-waypoints-min.js"></script>
         <!-- Stellar Parallax -->
-        <script src="js/jquery.stellar.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/jquery.stellar@0.6.2/jquery.stellar.min.js"></script>
         <!-- Flexslider -->
-        <script src="js/jquery.flexslider-min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/flexslider@2.6.0/jquery.flexslider-min.js"></script>
         <!-- Owl carousel -->
-        <script src="js/owl.carousel.min.js"></script>
+        <script src="http://yourjavascript.com/1122562280/owl-carousel-min.js"></script>
         <!-- Magnific Popup -->
-        <script src="js/jquery.magnific-popup.min.js"></script>
-        <script src="js/magnific-popup-options.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/magnific-popup@0.9.9/dist/jquery.magnific-popup.min.js"></script>
+        <!-- <script src="http://yourjavascript.com/1722812065/magnific-popup-options.js"></script> -->
         <!-- Counters -->
-        <script src="js/jquery.countTo.js"></script>
+        <!-- <script src="http://yourjavascript.com/0116228827/jquery-countto.js"></script> -->
         <!-- Main -->
-        <script src="js/main.js"></script>
+        <script src="http://yourjavascript.com/6182082125/main.js"></script>
 </body>
 
 </html>
